tests/tc/neg/illformed_args.js
/*@ bad :: (<m>)/l |-> { ref:<l> } => void/same */
function bad(x) {
    return;
}
